--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "subspace_app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.5",
+    "node": "v14.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
